<resources>
    <string name="app_name">ABCMobile</string>
    <string name="input">Input</string>
    <string name="ABC">ABC</string>
    <string name="mobile">mobile</string>
    <string name="mabc">M-ABC</string>
    <string name="bukarekeningbaru">Buka Rekening Baru</string>
    <string name="gantikodeakses">Ganti Kode Akses</string>
    <string name="selamatdatangdiabcmobile">Selamat Datang di ABC Mobile</string>
    <string name="mtransfer">m-Transfer</string>
    <string name="send">Send</string>
    <string name="mobilepayment">Mobile Payment</string>
    <string name="namasesuaiktp">Nama Sesuai KTP</string>
    <string name="ttl">Tempat Tanggal Lahir</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="statusperkawinan">Status Perkawinan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="Kewarganegaraan">Kewarganegaraan</string>
    <string name="nohp">No. HP</string>
    <string name="kodeakses">Kode Akses</string>
    <string name="berhasil">Berhasil</string>
    <string name="gagal">Gagal</string>
    <string name="kodeaksessaatini">Kode Akses Saat Ini</string>
    <string name="kodeaksesyangbaru">Kode Akses yang Baru</string>
    <string name="konfirmasikodeaksesyangbaru">Konfirmasi Kode Akses yang Baru</string>
    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="input6alphanum">Input 6 Alphanum</string>
    <string name="login">Login</string>
    <string name="nomorkartu">Nomor Kartu</string>
    <string name="inputnomor">Input Nomor</string>
    <string name="KOnfirmasi">Konfirmasi</string>
    <string name="batal">BATAL</string>
    <string name="kirim">KIRIM</string>
    <string name="listransaksi">List Transaksi</string>
    <string name="jumlah">Jumlah</string>
    <string name="berita">Berita</string>
    <string name="rekeningpengirim">Rek. Pengirim</string>
    <string name="rekeningpenerima">Rek. Penerima</string>
    <string name="waktu">Waktu</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="mpayment">m-Payment</string>
    <string name="exit">Exit</string>
    <string name="minfo">m-Info</string>
    <string name="infosaldo">Info Saldo</string>
    <string name="novA">No. Virtual Account</string>
    <string name="antarrekening">Antar Rekening</string>
    <string name="norektujuan">No. Rekening Tujuan</string>
    <string name="jumlahuangrp">Jumlah Uang (Rp.)</string>
    <string name="Transfer">Transfer</string>
    <string name="agama">Agama</string>
    <string name="account">Account</string>
    <string name="newaccount">New Account</string>
    <string name="details">Details</string>
    <string name="favorit">Transaksi Favorit</string>
    <string name="nomorrekening">Nomor Rekening</string>
    <string name="Home">Home</string>
    <string name="Transaction">Transaction</string>
    <string name="listfavorit">List Favorit</string>
    <string name="alias">Alias</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="inputkodeakses">Input Kode Akses</string>
</resources>