<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#163d97"
    tools:context=".activity.Favorit">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ABC"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:textColor="@color/white"
        android:textSize="48sp"/>

    <TextView
        android:id="@+id/judul2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="27dp"
        android:text="@string/mobile"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tv_list_favorit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/listfavorit"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/et_no_rek_favorit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_list_favorit"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_rectangle"
        android:gravity="center"
        android:hint="@string/nomorrekening"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/et_alias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_no_rek_favorit"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_rectangle"
        android:gravity="center"
        android:hint="@string/alias"
        android:textSize="24dp" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_alias"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#2866f3"
        android:text="@string/view" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_view"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#2866f3"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_simpan"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#2866f3"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_edit"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="#2866f3"
        android:text="@string/delete" />

</RelativeLayout>