<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#163d97">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="48dp"
        android:text="@string/ABC"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/mabc"
        app:layout_constraintEnd_toStartOf="@+id/judul2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/judul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/judul" />

    <Button
        android:id="@+id/mabc"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#163d97"
        android:text="@string/mabc"
        app:iconTint="#E60F0F"
        app:layout_constraintBottom_toTopOf="@+id/bukarekeningbaru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/bukarekeningbaru"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#2866f3"
        android:text="@string/bukarekeningbaru"
        app:layout_constraintBottom_toTopOf="@+id/gantikodekases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mabc" />

    <Button
        android:id="@+id/gantikodekases"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="260dp"
        android:backgroundTint="#2866f3"
        android:text="@string/gantikodeakses"
        app:layout_constraintBottom_toTopOf="@+id/selamatdatangdiabcmobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bukarekeningbaru" />

    <LinearLayout
        android:id="@+id/selamatdatangdiabcmobile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#686868"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gantikodekases">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamatdatangdiabcmobile"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>