<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#163d97">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="168dp"
        android:text="@string/ABC"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="@+id/judul2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="84dp"
        android:text="@string/mobile"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="428dp"
        android:background="@drawable/round_rectangle"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul2">

        <TextView
            android:id="@+id/tv_konfirmasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KOnfirmasi"
            android:textColor="@color/black"
            android:textSize="28dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="385dp"
        android:background="@drawable/round_rectangle"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul">

        <Button
            android:id="@+id/btn_batal"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#2866f3"
            android:text="@string/batal"></Button>

        <Button
            android:id="@+id/btn_kirim"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#2866f3"
            android:text="@string/kirim"></Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>